# SessionVault

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: INGEST_KERNEL.md  LOGGING.md  deep-research-report.md  parity-contract.md  rawevent-reconciliation.md
src/: catalog.rs  cursor.rs  discover.rs  lib.rs  logging.rs  parser.rs  pathnorm.rs  project_root.rs  rawevent.rs  report.rs  scan.rs  store.rs  wsl.rs
tests/: incremental_parity_it.rs
