[package]
name = "session-vault"
version = "0.0.0"
edition = "2021"
# 真实 MSRV 下限：clap_builder 4.6 等依赖用 edition 2024，需 rustc ≥ 1.85。
# 已实测 `cargo +1.85.0 check --all-targets` 通过；本 crate 自身代码不依赖 >1.85 的 API。
rust-version = "1.85"
description = "Shared ingestion kernel + immutable RawEvent contract for agent session data (QuotaBar / TumeFlow)"
license = "MIT"
repository = "https://github.com/Simon995/SessionVault"
readme = "README.md"

[lib]
name = "session_vault"
path = "src/lib.rs"

[[bin]]
name = "svault"
path = "src/bin/svault.rs"

# P2 影子并跑 diff 工具：比对 QuotaBar cache.db 输出 ⇄ SessionVault RawEvent。
# `required-features` 门控——默认构建/发布 lib 不含它，不引额外依赖面。
# 见 docs/parity-contract.md。用法：`cargo run --features parity --bin parity -- ...`。
[[bin]]
name = "parity"
path = "src/bin/parity.rs"
required-features = ["parity"]

[features]
# 仅启用 parity diff 工具（纯逻辑，复用既有 serde_json/clap，无新依赖）。
parity = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "1"
dirs-next = "2"

# CLI-only (used by the `svault` bin; kept minimal)
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"

[dev-dependencies]
